# NimingZhonggong

./: .gitignore  Cargo.toml  data.db
NimingDB/: 000013.sst  000016.sst  000021.sst  IDENTITY  MANIFEST-000023  OPTIONS-000020
src/: main.rs
src/backend/: mod.rs
src/backend/db/: error.rs  mod.rs  surreal.rs  test.rs
src/backend/email/: mod.rs
src/backend/web/: mod.rs  verify.rs
static/: error404.html  index.css  index.html
static/login/: index.html  index.js
static/register/: index.html
static/verify/: index.html  index.js
tool/: build.sh  register_test.hurl
tool/api_atac/: Niming_register.json
web/Niming/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
web/Niming/src/: App.vue  main.ts  platte.txt  style.css
web/Niming/src/components/: Idendtify_input.vue  License.vue  Login.vue  MainPage.vue  Niming.vue  Niming_post.vue  Option_box.vue  Register.vue  Verify.vue  Vote.vue
web/Niming/src/store/: index.ts
